--- a/Classification based on the First Original Featuring Result.ipynb
+++ b/Classification based on the First Original Featuring Result.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "54fa1d66",
    "metadata": {},
    "outputs": [
@@ -474,6 +474,199 @@
     "print(\"Logistic Regression Precision:\", precision)\n",
     "print(\"Logistic Regression Recall:\", recall)\n",
     "print(\"Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0961f36",
+   "metadata": {},
+   "source": [
+    "To find the optimized parameter group, we import the GridSearchCV library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dc4ac2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "Best Cross-Validation Score: 0.7173476022725453\n",
+      "Improved Logistic Regression Accuracy: 0.7164166257148312\n",
+      "Improved Logistic Regression Precision: 0.8922285622438318\n",
+      "Improved Logistic Regression Recall: 0.342539348289733\n",
+      "Improved Logistic Regression F1-score: 0.49502969364408317\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Define parameter grid\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'solver': ['liblinear']\n",
+    "}\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a logistic regression model\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Perform grid search\n",
+    "grid_search = GridSearchCV(lr, param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_search.fit(X_train, Y_train)\n",
+    "\n",
+    "# Get the best parameters and best score\n",
+    "best_params = grid_search.best_params_\n",
+    "best_score = grid_search.best_score_\n",
+    "\n",
+    "print(\"Best Parameters:\", best_params)\n",
+    "print(\"Best Cross-Validation Score:\", best_score)\n",
+    "\n",
+    "# Train model with the best parameters\n",
+    "best_lr = LogisticRegression(**best_params, random_state=42)\n",
+    "best_lr.fit(X_train, Y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "Y_pred_best = best_lr.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy_best = accuracy_score(Y_test, Y_pred_best)\n",
+    "precision_best = precision_score(Y_test, Y_pred_best)\n",
+    "recall_best = recall_score(Y_test, Y_pred_best)\n",
+    "f1_best = f1_score(Y_test, Y_pred_best)\n",
+    "\n",
+    "print(\"Improved Logistic Regression Accuracy:\", accuracy_best)\n",
+    "print(\"Improved Logistic Regression Precision:\", precision_best)\n",
+    "print(\"Improved Logistic Regression Recall:\", recall_best)\n",
+    "print(\"Improved Logistic Regression F1-score:\", f1_best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24d3624a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4d89cc71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [nan nan nan nan nan nan nan nan nan nan]\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:984: RuntimeWarning: invalid value encountered in cast\n",
+      "  results[\"rank_%s\" % key_name] = np.asarray(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters: {'C': 0.01, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "Best Cross-Validation Score: nan\n",
+      "Improved Logistic Regression Accuracy: 0.7164025403701628\n",
+      "Improved Logistic Regression Precision: 0.8922424619960012\n",
+      "Improved Logistic Regression Recall: 0.34249306752748887\n",
+      "Improved Logistic Regression F1-score: 0.49498350129314195\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import make_scorer, precision_score, recall_score, f1_score, accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df is your DataFrame and it is already loaded\n",
+    "# Features and target definition\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Define parameter grid\n",
+    "param_grid = {\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'solver': ['liblinear']\n",
+    "}\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Custom scorer function\n",
+    "def custom_scorer(estimator, X, y):\n",
+    "    y_pred = estimator.predict(X)\n",
+    "    accuracy = accuracy_score(y, y_pred)\n",
+    "    precision = precision_score(y, y_pred)\n",
+    "    recall = recall_score(y, y_pred)\n",
+    "    f1 = f1_score(y, y_pred)\n",
+    "    return accuracy + precision + recall + f1\n",
+    "\n",
+    "# Create a logistic regression model\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Perform grid search with custom scorer\n",
+    "grid_search = GridSearchCV(lr, param_grid, cv=5, scoring=make_scorer(custom_scorer), n_jobs=-1)\n",
+    "grid_search.fit(X_train, Y_train)\n",
+    "\n",
+    "# Get the best parameters and best score\n",
+    "best_params = grid_search.best_params_\n",
+    "best_score = grid_search.best_score_\n",
+    "\n",
+    "print(\"Best Parameters:\", best_params)\n",
+    "print(\"Best Cross-Validation Score:\", best_score)\n",
+    "\n",
+    "# Train model with the best parameters\n",
+    "best_lr = LogisticRegression(**best_params, random_state=42)\n",
+    "best_lr.fit(X_train, Y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "Y_pred_best = best_lr.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy_best = accuracy_score(Y_test, Y_pred_best)\n",
+    "precision_best = precision_score(Y_test, Y_pred_best)\n",
+    "recall_best = recall_score(Y_test, Y_pred_best)\n",
+    "f1_best = f1_score(Y_test, Y_pred_best)\n",
+    "\n",
+    "print(\"Improved Logistic Regression Accuracy:\", accuracy_best)\n",
+    "print(\"Improved Logistic Regression Precision:\", precision_best)\n",
+    "print(\"Improved Logistic Regression Recall:\", recall_best)\n",
+    "print(\"Improved Logistic Regression F1-score:\", f1_best)"
    ]
   },
   {
@@ -2366,54 +2559,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c96a29fc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\AppData\\Roaming\\Python\\Python39\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:204: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1954s\u001b[0m 30ms/step - accuracy: 0.6833 - loss: 1.3123 - val_accuracy: 0.7194 - val_loss: 1.1391 - learning_rate: 0.0010\n",
-      "Epoch 2/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1876s\u001b[0m 29ms/step - accuracy: 0.7207 - loss: 1.1295 - val_accuracy: 0.7238 - val_loss: 1.1046 - learning_rate: 0.0010\n",
-      "Epoch 3/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1880s\u001b[0m 29ms/step - accuracy: 0.7281 - loss: 1.0756 - val_accuracy: 0.7343 - val_loss: 1.0397 - learning_rate: 0.0010\n",
-      "Epoch 4/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1949s\u001b[0m 31ms/step - accuracy: 0.7330 - loss: 1.0467 - val_accuracy: 0.7362 - val_loss: 1.0321 - learning_rate: 0.0010\n",
-      "Epoch 5/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1955s\u001b[0m 31ms/step - accuracy: 0.7351 - loss: 1.0360 - val_accuracy: 0.7366 - val_loss: 1.0259 - learning_rate: 0.0010\n",
-      "Epoch 6/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1979s\u001b[0m 31ms/step - accuracy: 0.7372 - loss: 1.0253 - val_accuracy: 0.7391 - val_loss: 1.0160 - learning_rate: 0.0010\n",
-      "Epoch 7/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1978s\u001b[0m 31ms/step - accuracy: 0.7386 - loss: 1.0171 - val_accuracy: 0.7370 - val_loss: 1.0196 - learning_rate: 0.0010\n",
-      "Epoch 8/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1977s\u001b[0m 31ms/step - accuracy: 0.7389 - loss: 1.0195 - val_accuracy: 0.7396 - val_loss: 1.0193 - learning_rate: 0.0010\n",
-      "Epoch 9/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2002s\u001b[0m 31ms/step - accuracy: 0.7402 - loss: 1.0112 - val_accuracy: 0.7389 - val_loss: 1.0152 - learning_rate: 0.0010\n",
-      "Epoch 10/10\n",
-      "\u001b[1m63897/63897\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1999s\u001b[0m 31ms/step - accuracy: 0.7411 - loss: 1.0095 - val_accuracy: 0.7395 - val_loss: 1.0172 - learning_rate: 0.0010\n",
-      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m209s\u001b[0m 10ms/step\n",
-      "\u001b[1m19968/19968\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32481s\u001b[0m 2s/step - accuracy: 0.7377 - loss: 1.0207\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LSTM Accuracy: 0.738549397303752\n",
-      "LSTM Precision: 0.680212447387418\n",
-      "LSTM Recall: 0.738549397303752\n",
-      "LSTM F1-score: 0.6612208353243875\n"
+      "\u001b[1m 8207/63897\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m25:25\u001b[0m 27ms/step - accuracy: 0.6342 - loss: 1.5810"
      ]
     }
    ],
@@ -2429,7 +2592,8 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "# Assuming df is your DataFrame and it is already loaded\n",
-    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "features = ['posx', 'posy', 'posx_n', 'posy_n', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', \n",
+    "            'aclx_n', 'acly_n', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
     "X = df[features].values\n",
     "Y = df['class'].astype(int).values\n",
     "\n",
