--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c1b42c46",
    "metadata": {},
    "outputs": [
@@ -2552,6 +2552,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66193221",
+   "metadata": {},
+   "source": [
+    "Then we use both the GridSearch and the random search optimization algorithms. Here is the output:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "a1e304fa",
@@ -2600,6 +2608,295 @@
     "print(\"Improved Logistic Regression Precision:\", precision)\n",
     "print(\"Improved Logistic Regression Recall:\", recall)\n",
     "print(\"Improved Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ae54c005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:372: FitFailedWarning: \n",
+      "205 fits failed out of a total of 500.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "45 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1471, in fit\n",
+      "    raise ValueError(\n",
+      "ValueError: l1_ratio must be between 0 and 1; got (l1_ratio=None)\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "40 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1461, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 457, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Only 'saga' solver supports elasticnet penalty, got solver=liblinear.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "50 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1461, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 447, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got elasticnet penalty.\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "40 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1461, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 464, in _check_solver\n",
+      "    raise ValueError(\"penalty='none' is not supported for the liblinear solver\")\n",
+      "ValueError: penalty='none' is not supported for the liblinear solver\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "30 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 1461, in fit\n",
+      "    solver = _check_solver(self.solver, self.penalty, self.dual)\n",
+      "  File \"C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py\", line 447, in _check_solver\n",
+      "    raise ValueError(\n",
+      "ValueError: Solver lbfgs supports only 'l2' or 'none' penalties, got l1 penalty.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [0.7201768  0.72017406        nan 0.72017406 0.72017406 0.72017837\n",
+      " 0.72017406 0.72017602 0.72018189        nan 0.72017406        nan\n",
+      "        nan        nan        nan        nan 0.72017954 0.72017406\n",
+      " 0.72017406        nan 0.72017602 0.72017602 0.72017719        nan\n",
+      "        nan        nan 0.72018032 0.72017406 0.72017993 0.72017406\n",
+      "        nan        nan 0.72017406 0.72017719        nan        nan\n",
+      " 0.72017954        nan 0.72017719 0.72017406        nan        nan\n",
+      "        nan        nan 0.72017602        nan 0.72017406        nan\n",
+      " 0.7201768  0.72017406        nan 0.72017641 0.72017406        nan\n",
+      "        nan 0.72017524 0.72017406 0.72017406        nan 0.72017993\n",
+      "        nan        nan 0.72017406        nan        nan        nan\n",
+      " 0.72017406 0.72017641        nan 0.7201768  0.72017954 0.72017406\n",
+      "        nan        nan 0.72017602 0.72017406        nan        nan\n",
+      " 0.72017445 0.72017406 0.72017641 0.72017719 0.72017993 0.72017602\n",
+      "        nan 0.72017406        nan 0.72017719 0.72017602 0.72017406\n",
+      "        nan        nan 0.72017641        nan 0.72017954 0.72017641\n",
+      " 0.72017406 0.72017406 0.72017406 0.72017406]\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:984: RuntimeWarning: invalid value encountered in cast\n",
+      "  results[\"rank_%s\" % key_name] = np.asarray(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Random Search found) Best Parameters: {'C': 1.49816047538945, 'penalty': 'l2', 'solver': 'saga'}\n",
+      "Improved Logistic Regression Accuracy: 0.7194574951249058\n",
+      "Improved Logistic Regression Precision: 0.9128160688310483\n",
+      "Improved Logistic Regression Recall: 0.3412512004072707\n",
+      "Improved Logistic Regression F1-score: 0.4967828869799562\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from scipy.stats import uniform\n",
+    "\n",
+    "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "# Standardize features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define Logistic Regression model\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Define parameter grid for RandomizedSearchCV\n",
+    "param_distributions = {\n",
+    "    'C': uniform(loc=0, scale=4),\n",
+    "    'penalty': ['l2', 'l1', 'elasticnet', 'none'],\n",
+    "    'solver': ['lbfgs', 'liblinear', 'saga']\n",
+    "}\n",
+    "\n",
+    "random_search = RandomizedSearchCV(lr, param_distributions, n_iter=100, cv=5, random_state=42, n_jobs=-1)\n",
+    "random_search.fit(X_train, Y_train)\n",
+    "best_lr = random_search.best_estimator_\n",
+    "Y_pred = best_lr.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred)\n",
+    "recall = recall_score(Y_test, Y_pred)\n",
+    "f1 = f1_score(Y_test, Y_pred)\n",
+    "\n",
+    "print(\"(Random Search found) Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Improved Logistic Regression Accuracy:\", accuracy)\n",
+    "print(\"Improved Logistic Regression Precision:\", precision)\n",
+    "print(\"Improved Logistic Regression Recall:\", recall)\n",
+    "print(\"Improved Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99df6ae5",
+   "metadata": {},
+   "source": [
+    "Then we consider to reduce selected features' dimensions. This is achieved by grouping all features in the same combination. For example, features `posx` and `posy` are groupped together because they are in the same position value group. (They have correlations.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "748c7490",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.721186862442524\n",
+      "Logistic Regression Precision: 0.9322550398499766\n",
+      "Logistic Regression Recall: 0.33744075098250204\n",
+      "Logistic Regression F1-score: 0.4955215934801877\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "df['pos'] = df['posx'] + df['posy']\n",
+    "df['spd'] = df['spdx'] + df['spdy']\n",
+    "df['spd_n'] = df['spdx_n'] + df['spdy_n']\n",
+    "df['acl'] = df['aclx'] + df['acly']\n",
+    "df['hed'] = df['hedx'] + df['hedy']\n",
+    "df['hed_n'] = df['hedx_n'] + df['hedy_n']\n",
+    "\n",
+    "features = ['pos', 'spd', 'spd_n', 'acl', 'hed', 'hed_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "lr.fit(X_train, Y_train)\n",
+    "Y_pred = lr.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(Y_test, Y_pred)\n",
+    "precision = precision_score(Y_test, Y_pred)\n",
+    "recall = recall_score(Y_test, Y_pred)\n",
+    "f1 = f1_score(Y_test, Y_pred)\n",
+    "\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy)\n",
+    "print(\"Logistic Regression Precision:\", precision)\n",
+    "print(\"Logistic Regression Recall:\", recall)\n",
+    "print(\"Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99f11acf",
+   "metadata": {},
+   "source": [
+    "In the previous attempt, the constructed LR model has a low recall score. then we set up a recall threshold for new models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "89af667f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Accuracy: 0.40279860148177826\n",
+      "Logistic Regression Precision: 0.4040057893844541\n",
+      "Logistic Regression Recall: 0.9925796511201873\n",
+      "Logistic Regression F1-score: 0.57426909066567\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Create new combined features\n",
+    "df['pos'] = df['posx'] + df['posy']\n",
+    "df['spd'] = df['spdx'] + df['spdy']\n",
+    "df['spd_n'] = df['spdx_n'] + df['spdy_n']\n",
+    "df['acl'] = df['aclx'] + df['acly']\n",
+    "df['hed'] = df['hedx'] + df['hedy']\n",
+    "df['hed_n'] = df['hedx_n'] + df['hedy_n']\n",
+    "\n",
+    "# Select combined features\n",
+    "features = ['pos', 'spd', 'spd_n', 'acl', 'hed', 'hed_n']\n",
+    "X = df[features]\n",
+    "Y = (df['class'] != 0).astype(int)\n",
+    "\n",
+    "# Standardize features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_scaled, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create and train the Logistic Regression model\n",
+    "lr = LogisticRegression(random_state=42)\n",
+    "lr.fit(X_train, Y_train)\n",
+    "\n",
+    "# Predict probabilities on the test set\n",
+    "Y_pred_prob = lr.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Adjust threshold to optimize for recall\n",
+    "threshold = 0.15  # Example threshold, adjust as needed\n",
+    "Y_pred_adjusted = (Y_pred_prob > threshold).astype(int)\n",
+    "\n",
+    "# Calculate evaluation metrics with adjusted threshold\n",
+    "accuracy = accuracy_score(Y_test, Y_pred_adjusted)\n",
+    "precision = precision_score(Y_test, Y_pred_adjusted)\n",
+    "recall = recall_score(Y_test, Y_pred_adjusted)\n",
+    "f1 = f1_score(Y_test, Y_pred_adjusted)\n",
+    "\n",
+    "print(\"Logistic Regression Accuracy:\", accuracy)\n",
+    "print(\"Logistic Regression Precision:\", precision)\n",
+    "print(\"Logistic Regression Recall:\", recall)\n",
+    "print(\"Logistic Regression F1-score:\", f1)"
    ]
   },
   {
@@ -2655,7 +2952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f0c735",
+   "id": "4b1d9a9d",
    "metadata": {},
    "source": [
     "To find the optimized parameter group, we use an additional technique cross validation to optimize the classifier. We tried to have variable \"cv_folds\" values of 3, 5, and 10. However, the result has a lower level of accuracy compared with the original result."
@@ -2732,9 +3029,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9690d03",
+   "id": "46711be7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8348493337631971\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import cross_val_score, train_test_split\n",
