--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c1b42c46",
    "metadata": {},
    "outputs": [
@@ -2502,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "331f553b",
    "metadata": {},
    "outputs": [
@@ -4089,10 +4089,84 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46edafb8",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"bullet6-1\"><h3><b>Section 6.1</b>: Prediction (Binary Classification Approach (BCA))</h3></a>\n",
+    "<br>\n",
+    "[Back to Menu](#toc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6cf055bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Sample Index: 3124776\n",
+      "Random Sample Features: [[1.39722583e+03 8.83711472e+02 3.52984749e+01 3.70579897e+01\n",
+      "  4.52260115e-04 1.69405992e-03 4.78964993e-01 1.93067019e+00\n",
+      "  8.76861784e-01 5.01377270e-01 4.59620024e+01 7.28965429e+00]]\n",
+      "Prediction: 1\n",
+      "Probability Estimates:\n",
+      "[[0.01669477 0.98330523]]\n",
+      "\n",
+      "Calculation time: 0.002570 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "# Count this program's running time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Select a random index from the DataFrame\n",
+    "random_index = random.randint(0, len(df) - 1)\n",
+    "\n",
+    "# Select the corresponding row and extract the features\n",
+    "random_sample = df.loc[random_index, features].values.reshape(1, -1)\n",
+    "\n",
+    "# Ensure the random sample is scaled using the same scaler\n",
+    "random_sample_scaled = scaler.transform(random_sample)\n",
+    "\n",
+    "# Use the trained model to make a prediction\n",
+    "random_prediction = lr.predict(random_sample_scaled)\n",
+    "\n",
+    "print(\"Random Sample Index:\", random_index)\n",
+    "print(\"Random Sample Features:\", random_sample)\n",
+    "print(\"Prediction:\", random_prediction[0])\n",
+    "\n",
+    "# If you want to get the probability estimates of the classes\n",
+    "random_probabilities = lr.predict_proba(random_sample_scaled)\n",
+    "\n",
+    "print(\"Probability Estimates:\")\n",
+    "print(random_probabilities)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"\\nCalculation time: {elapsed_time:.6f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ea28aa1",
    "metadata": {},
    "source": [
-    "<b>Section 6</b>: Performance Matrices"
+    "<b>Section 7</b>: Performance Matrices"
    ]
   },
   {
@@ -4108,7 +4182,7 @@
    "id": "3a5c2af0",
    "metadata": {},
    "source": [
-    "<b>Section 7</b>: Discussions"
+    "<b>Section 8</b>: Discussions"
    ]
   },
   {
@@ -4124,7 +4198,7 @@
    "id": "dca0d9e6",
    "metadata": {},
    "source": [
-    "<b>Section 8</b>: Conclusions"
+    "<b>Section 9</b>: Conclusions"
    ]
   },
   {
