--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c1b42c46",
    "metadata": {},
    "outputs": [
@@ -2723,6 +2723,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from scipy.stats import uniform\n",
     "\n",
+    "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+    "\n",
     "features = ['posx', 'posy', 'spdx', 'spdy', 'spdx_n', 'spdy_n', 'aclx', 'acly', 'hedx', 'hedy', 'hedx_n', 'hedy_n']\n",
     "X = df[features]\n",
     "Y = (df['class'] != 0).astype(int)\n",
@@ -2897,6 +2899,14 @@
     "print(\"Logistic Regression Precision:\", precision)\n",
     "print(\"Logistic Regression Recall:\", recall)\n",
     "print(\"Logistic Regression F1-score:\", f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00315534",
+   "metadata": {},
+   "source": [
+    "Although the recall value has increased, both accuracy and precision values decrease. Therefore, this attempt is unsuccessful."
    ]
   },
   {
@@ -4128,29 +4138,22 @@
     }
    ],
    "source": [
+    "# Section 5.1 Logical Regression Prediction \n",
     "import random\n",
     "import time\n",
     "\n",
-    "# Count this program's running time\n",
     "start_time = time.time()\n",
     "\n",
-    "# Select a random index from the DataFrame\n",
     "random_index = random.randint(0, len(df) - 1)\n",
-    "\n",
-    "# Select the corresponding row and extract the features\n",
     "random_sample = df.loc[random_index, features].values.reshape(1, -1)\n",
     "\n",
-    "# Ensure the random sample is scaled using the same scaler\n",
     "random_sample_scaled = scaler.transform(random_sample)\n",
-    "\n",
-    "# Use the trained model to make a prediction\n",
     "random_prediction = lr.predict(random_sample_scaled)\n",
     "\n",
     "print(\"Random Sample Index:\", random_index)\n",
     "print(\"Random Sample Features:\", random_sample)\n",
     "print(\"Prediction:\", random_prediction[0])\n",
     "\n",
-    "# If you want to get the probability estimates of the classes\n",
     "random_probabilities = lr.predict_proba(random_sample_scaled)\n",
     "\n",
     "print(\"Probability Estimates:\")\n",
@@ -4160,6 +4163,78 @@
     "elapsed_time = end_time - start_time\n",
     "print(f\"\\nCalculation time: {elapsed_time:.6f} seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e6966a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Sample Index: 239982\n",
+      "Random Sample Features: [[ 1.03007096e+03  8.56892895e+02 -6.39939904e+00 -1.92008090e-01\n",
+      "  -2.43326110e-03  3.89292793e-05 -2.24992135e+00 -6.74810032e-02\n",
+      "  -9.99562066e-01 -2.95918230e-02  8.50196172e-01  4.57020395e-01]]\n",
+      "Prediction: 1\n",
+      "Probability Estimates:\n",
+      "[[0. 1.]]\n",
+      "\n",
+      "Calculation time: 0.290430 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Section 5.1 K-Nearest-Neighbour Prediction \n",
+    "import random\n",
+    "import time\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "random_index = random.randint(0, len(df) - 1)\n",
+    "random_sample = df.loc[random_index, features].values.reshape(1, -1)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "random_sample_scaled = scaler.transform(random_sample)\n",
+    "random_prediction = knn.predict(random_sample_scaled)\n",
+    "\n",
+    "print(\"Random Sample Index:\", random_index)\n",
+    "print(\"Random Sample Features:\", random_sample)\n",
+    "print(\"Prediction:\", random_prediction[0])\n",
+    "\n",
+    "random_probabilities = knn.predict_proba(random_sample_scaled)\n",
+    "\n",
+    "print(\"Probability Estimates:\")\n",
+    "print(random_probabilities)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"\\nCalculation time: {elapsed_time:.6f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f39c5505",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
